# dauw

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
docs/: .gitignore  conf.py  control_flow.rst  data_types.rst  expressions.rst  index.rst  lexical_analysis.rst  packages.rst  standard_library.rst  syntax.rst  types_and_methods.rst
docs/static/css/: custom.css
src/: README.md  ast.cpp  ast.h  common.cpp  common.h  dauw.cpp  dauw.h  debug.cpp  debug.h  errors.cpp  errors.h  internals_object.cpp  internals_object.h  internals_value.cpp  internals_value.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  logging.cpp  logging.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  source_lexer.cpp  source_lexer.h  source_location.cpp  source_location.h  source_parser.cpp  source_parser.h  source_token.cpp  source_token.h  token.cpp  token.h  utils.cpp  utils.h  vm.cpp  vm.h
src/core/: errors.cpp  errors.h
src/dauw/: common.cpp  common.h  common.hpp  dauw.cpp  dauw.hpp  debug.cpp  debug.hpp  errors.cpp  errors.h  errors.hpp  globals.cpp  globals.hpp  logging.cpp  logging.h
src/dauw/ast/: analyzer.cpp  analyzer.hpp  ast.cpp  ast.hpp  ast_expr.cpp  ast_expr.hpp  ast_node.cpp  ast_node.hpp  ast_type_expr.cpp  ast_type_expr.hpp  compiler.cpp  compiler.hpp  expr.cpp  expr.hpp  interpreter.cpp  interpreter.hpp  node.cpp  node.hpp  parameter.cpp  parameter.hpp  type_expr.cpp  type_expr.hpp  type_resolver.cpp  type_resolver.hpp
src/dauw/backend/: chunk.cpp  chunk.hpp  code.cpp  code.hpp  compiler.cpp  compiler.hpp  disassemble.cpp  disassemble.hpp  disassembler.cpp  disassembler.hpp  instruction.hpp  interpreter.cpp  interpreter.hpp  type_resolver.cpp  type_resolver.hpp  vm.cpp  vm.hpp
src/dauw/code/: ast_expr.cpp  ast_expr.hpp  ast_node.cpp  ast_node.hpp  ast_type_expr.cpp  ast_type_expr.hpp  lexer.cpp  lexer.hpp  location.hpp  parser.cpp  parser.hpp  source.hpp  token.cpp  token.hpp
src/dauw/frontend/: lexer.cpp  lexer.hpp  location.cpp  location.hpp  parser.cpp  parser.hpp  source.cpp  source.hpp  token.cpp  token.hpp
src/dauw/internals/: format.cpp  format.hpp  list.cpp  list.hpp  object.cpp  object.h  object.hpp  record.cpp  record.hpp  record_object.cpp  record_object.hpp  sequence_object.cpp  sequence_object.hpp  string.cpp  string.hpp  string_object.cpp  string_object.hpp  type.cpp  type.hpp  value.cpp  value.hpp
src/dauw/interpreter/: ast.h  interpreter.cpp  interpreter.h  interpreter.hpp  type_resolver.hpp
src/dauw/parser/: lexer.cpp  lexer.h  location.cpp  location.h  parser.cpp  parser.h  token.cpp  token.h
src/dauw/source/: lexer.cpp  lexer.hpp  location.cpp  location.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/dauw/utils/: debug.cpp  debug.hpp  math.cpp  math.hpp  regex.cpp  regex.hpp  string.cpp  string.hpp
src/dauw/vm/: vm.cpp  vm.hpp
src/parser/: lexer.cpp  lexer.h  location.cpp  location.h
tools/: test.py  utils.py
